--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta name="description" content="Practice HTML & CSS">
+    <link rel="shortcut icon" href="/build/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="/build/css/app.css">
-
-    <title>Frontend Mentor | 3-column preview card component</title>
+    <title>3 Column Preview Card Component</title>
 
 </head>
 <body>
@@ -48,7 +48,7 @@
 
     <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Donovan Eliosa</a>.
+        Coded by <a href="https://github.com/Tackless">Donovan Eliosa</a>.
     </footer>
 </body>
 </html>
