--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     </section>
 
     <footer class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/Tackless">Donovan Eliosa</a>.
+        <p><a href="https://github.com/Tackless">Donovan WebP</a> | Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor 2022</a></p>
     </footer>
 </body>
 </html>
