--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer class="attribution">
-        <p><a href="https://github.com/Tackless">Donovan WebP</a> | Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor 2022</a></p>
+        <p><a target="_blank" href="https://www.donovan-webp.com">Donovan WebP</a> | Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor 2022</a></p>
     </footer>
 </body>
 </html>
